--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -1,3 +1,5 @@
 <%- include('../partials/header') %>
-<%- body %> 
+<main class="container my-4">
+    <%- body %>
+</main>
 <%- include('../partials/footer') %>
