--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,9 +1,5 @@
-
-
-<div class="container text-center">
+<div class="container text-center mt-5">
     <h1 class="text-danger">404 - Page Not Found</h1>
     <p>Sorry, the page you are looking for does not exist.</p>
     <a href="/" class="btn btn-primary">Go Home</a>
 </div>
-
-
