--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,10 @@
 
+<% if (error_msg.length > 0) { %>
+    <div class="alert alert-danger"><%= error_msg %></div>
+<% } %>
+<% if (messages.error_msg) { %>
+    <div class="alert alert-danger"><%= messages.error_msg %></div>
+<% } %>
 
 <div class="row justify-content-center">
     <div class="col-md-6">
