--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Blog</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css">
+    <!-- <link rel="stylesheet" href="../../public/css/styles.css"> -->
+    <script src="https://kit.fontawesome.com/your-fontawesome-key.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav class="navbar navbar-dark bg-dark">
-        <div class="container">
+        <div class="container d-flex justify-content-between">
             <a class="navbar-brand" href="/">Blog App</a>
+            <a href="<%= user ? '/api/auth/logout' : '/login' %>" class="btn <%= user ? 'btn-danger' : 'btn-primary' %>">
+                <%= user ? 'Logout' : 'Login' %>
+            </a>
         </div>
     </nav>
-
-
