--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,3 +1,11 @@
+<% if (error_msg && error_msg.length > 0) { %>
+    <div class="alert alert-danger"><%= error_msg %></div>
+<% } %>
+
+<% if (success_msg && success_msg.length > 0) { %>
+    <div class="alert alert-success"><%= success_msg %></div>
+<% } %>
+
 
 <div class="row justify-content-center">
     <div class="col-md-6">
@@ -9,7 +17,7 @@
                 <input type="password" name="password" class="form-control mb-2" placeholder="Password" required>
                 <button type="submit" class="btn btn-primary w-100">Register</button>
             </form>
-            <p class="mt-3 text-center">Already have an account? <a href="/api/auth/login">Login</a></p>
+            <p class="mt-3 text-center">Already have an account? <a href="/login">Login</a></p>
         </div>
     </div>
 </div>
