--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -1,5 +1,5 @@
 <%- include('../partials/header') %>
-<main class="container my-4">
+<main class="container my-4 flex-grow-1">
     <%- body %>
 </main>
 <%- include('../partials/footer') %>
